@@ -41,6 +41,7 @@
   * Add Python(ty) support
   * Add support for [[https://github.com/tombi-toml/tombi][Tombi language server]] (TOML language).
   * Make lsp-headerline--check-breadcrumb public
+  * Added Odin langauge server support [[https://github.com/DanielGavin/ols][ols]]
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
